added new files

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <title>Cows</title>
+    <title>Dogs</title>
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
     </head>
 <body>
     <header>
@@ -16,7 +17,7 @@
 4.I like that dogs grow faster than humans.
     </p>
     </div>
-        <div class="whatidogshelpuswith.">
+        <div class="whatidogshelpuswith">
     <h3>what i dogs help us with.</h3>
     <p>
     5.I like that dogs are there when your feeling lonely.
@@ -42,7 +43,7 @@
 15.I like dogs because they make me happy.
 16.I like that if you buy a dog as a baby it lasts longer.
     </p>
-   <img src="img/dogs.jpg" height="60%" width="40%">
+   <img src="assets/img/dogs.jpg" height="60%" width="40%">
     </div>
     </body>
 </html>
