added new files

--- a/whattheyhelpuswith.html
+++ b/whattheyhelpuswith.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>What They Help Us With</title>
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/whattheyhelpuswith.css">
     </head>
     <body>
     <header>
@@ -19,6 +20,11 @@
             Pets also provide valuable companionship for older adults.
             It can even ease you on security mesaures.
             You dont need only a dog and a cat even watching fish in an aquarium can help reduce muscle tension and lower pulse rate.
+            As well as providing faithful companionship.
+            Financial burden.
+            Decreased cleanliness.
+            There Will Be Loads of Poop and Pee.
+            Having a Pet Comes With Expenses.
         </p>
        </div>
         <div class="whattheycando">
@@ -34,6 +40,11 @@
             Regular walking or playing with pets can also decrease and triglyceride levels.
             Pets can help manage loneliness.
             Pets can help manage depresion.
+            Expect Tons of Doggie Drool.
+            Bearly getting any slip over woof wooooooooooooooooooooooooooooooooof.
+            Pet ownership is not cheap.
+            just incase Saying Goodbye.
+             Having a pet requires thinking ahead.
         </p>
        </div>
         <div class="whattheycandoforus">
@@ -48,8 +59,14 @@
             Dogs can be trained to assist people with disabilities.
             Helping their owners in their daily lives to become much more than just pets.
             In many cases they can help them overcome physical problems.
-            retrieving can be played as a game such us fetch. 
+            retrieving can be played as a game such us fetch.
+            Owning a dog takes a lot of hard work.
+            Lack of Freedom.
+            Pets require a high degree of care and attention.
+        For example: if you want to travel, it should be for a very limited time so as not to produce undue stress and anxiety in your pet.
+            Bringing a dog into your home will change your life.
         </p>
+            <img src="assets/img/cutesweepingpuppy.jpg" height="60%" width="40%">
        </div>
       </body>
      </html>
