added new files

--- a/whyilikedogs.html
+++ b/whyilikedogs.html
@@ -1,13 +1,18 @@
 <html>
 <head>
     <title>Why I Like Dogs</title>
-    <link rel="stylesheet" type="text/css" href="assets/stylesheets/whyilikedogs.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/whyilikedogs.css">
     </head>
     <body>
+        <div class="container">
     <header>
         <h1>About Why I Like Dogs</h1>
         </header>
+            <div class="row">
         <div class="whyilikedogs">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
         <h3>Why I Like Dogs</h3>
         <p>
         There very cute when there babys.
@@ -26,8 +31,14 @@
             Many people keep them to help on the farm.
             Dogs actually love us.
         </p>
+         </div>
+            <div class="col-md-3"></div>
         </div>
+       </div>
+            <div class="row">
         <div class="whyilovedogs">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
         <h3>Why i love dogs</h3>
         <p>
          They get regular exercise from walking their pets.
@@ -46,9 +57,15 @@
              Dogs will ignore the presence of danger to see their owner's smile.
              Dogs do recognize and understand us.
         </p>
+         </div>
+            <div class="col-md-2"></div>
         </div>
-        <div class="whyiadmire">
-        <h3>Why I admire</h3>
+       </div>
+            <div class="row">
+        <div class="whyiadmiredogs">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+        <h3>Why I admire dogs</h3>
         <p>
         Dogs Keep Us Healthy.
             Dogs give us Positive feelings.
@@ -66,7 +83,15 @@
             If you are reading this you must know what a dog is.
             Dogs evolved from wolves.
         </p>
-            <img src="assets/img/goldenretrieverpuppy.jpg" height="70%" width="40%">
+            
         </div>
+            <div class="col-md-1"></div>
+        </div>
+       </div>
+      </div>
+        <img src="assets/img/goldenretrieverpuppy.jpg" height="70%" width="40%">
+        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/jquery-3.5.1.min.js"></script>
+        <script src="assets/js/popper.min.js"></script>
     </body>
 </html>
