--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <html>
 <head>
     <title>Dogs</title>
-    <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     </head>
 <body>
+    <div class="container">
     <header>
     <h1>About dogs</h1>
     </header>
-    
+        <div class="row">
     <div class="whattheycando">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
     <h3>what they can do </h3>
     <p>
     1.Different types of dogs came in different shapes and and sizes for examples guard dogs can tell if you have a weapon.
@@ -16,8 +20,15 @@
 3.Dogs help when herding the sheep
 4.I like that dogs grow faster than humans.
     </p>
+            <a href="whattheycando.html">What They Can Do</a>
+     </div>
+        <div class="col-md-3"></div>
     </div>
+   </div>
+        <div class="row">
         <div class="whatidogshelpuswith">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">        
     <h3>what i dogs help us with.</h3>
     <p>
     5.I like that dogs are there when your feeling lonely.
@@ -25,8 +36,16 @@
 7.Some dogs even help the blind.
 8.Dogs help in leting you free with security stress.
     </p>
+    <a href="whattheyhelpuswith.html">What They Help Us With</a>
+     </div>
+    <div class="col-md-2"></div>
     </div>
-          <div class="whatdogsdoforhumans">  
+   </div>
+        <div class="row">
+          <div class="whatdogsdoforhumans">
+              <div class="col-md-1"></div>
+              <div class="col-md-10">
+              
     <h3> what dogs do for humans </h3>
     <p>
     9.They help you exersise while you help them with their exersise.
@@ -34,8 +53,15 @@
 11.I like that they have a strong sence of smell.
 12.hey help children understand about responsibilyty.
     </p>
+        <a href="whyilikedogs.html">Why I Like Dogs</a>
+     </div>
+    <div class="col-md-1"></div>
     </div>
-          <div class="whyilikedogs">    
+   </div>
+        <div class="row">
+          <div class="whyilikedogs">
+              <div class="col-md-3"></div>
+              <div class="col-md-6">
     <h3>why i like dogs</h3>
     <p>
     13.there very cute when there babys.
@@ -43,7 +69,14 @@
 15.I like dogs because they make me happy.
 16.I like that if you buy a dog as a baby it lasts longer.
     </p>
-   <img src="assets/img/dogs.jpg" height="60%" width="40%">
+     </div>
+    <div class="col-md-3"></div>
     </div>
-    </body>
+   </div>
+  </div>
+    <img src="assets/img/dogs.jpg" height="60%" width="40%">
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+ </body>
 </html>
