--- a/whattheycando.html
+++ b/whattheycando.html
@@ -1,13 +1,18 @@
 <html>
 <head>
     <title>What They Can Do</title>
-    <link rel="stylesheet" type="text/css" href="assets/stylesheets/whattheycando.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/whattheycando.css">
     </head>
     <body>
+        <div class="container">
     <header>
         <h1>About What they can do.</h1>
         </header>
+            <div class="row">
         <div class="whatheycando">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
         <h3>What They Can Do</h3>
         <p>
        Dogs can do so many thing.
@@ -31,8 +36,15 @@
             All dogs Have evolved from wolves.
             Dogs have lived with people for at least 30,000 years.
         </p>
+        </div>
+            <div class="col-md-3"></div>
        </div>
+      </div>
+            <div class="row">
         <div class="theircapabilities">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+            
         <h3>Their Capabilities</h3>
             <p>
             They are also police dogs.
@@ -56,7 +68,14 @@
                 some Great Danes have lived for ten years.
                 dogs sometimes help police.
             </p>
-            <img src="assets/img/sweepingpuppies.jpg" height="70%" width="40%">
+            </div>
+            <div class="col-md-2"></div>
            </div>
+          </div>
+         </div>
+        <img src="assets/img/sweepingpuppies.jpg" height="70%" width="40%">
+        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/jquery-3.5.1.min.js"></script>
+        <script src="assets/js/popper.min.js"></script>
           </body>
          </html>
