--- a/whattheyhelpuswith.html
+++ b/whattheyhelpuswith.html
@@ -1,13 +1,18 @@
 <html>
 <head>
     <title>What They Help Us With</title>
-    <link rel="stylesheet" type="text/css" href="assets/stylesheets/whattheyhelpuswith.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/whattheyhelpuswith.css">
     </head>
     <body>
+        <div class="container">
     <header>
         <h1>About What They Help Us With.</h1>
         </header>
+            <div class="row">
         <div class="whatthehelpuswith">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
         <h3>What They Help Us With</h3>
         <p>
         Dogs help us with strees.
@@ -26,8 +31,14 @@
             There Will Be Loads of Poop and Pee.
             Having a Pet Comes With Expenses.
         </p>
+        </div>
+            <div class="col-md-3"></div>
        </div>
+      </div>
+            <div class="row">
         <div class="whattheycando">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
         <h3>What They Can Do</h3>
         <p>
         Detection dogs can be employed at airports.
@@ -46,8 +57,15 @@
             just incase Saying Goodbye.
              Having a pet requires thinking ahead.
         </p>
+        </div>
+            <div class="col-md-2"></div>
        </div>
+      </div>
+            <div class="row">
         <div class="whattheycandoforus">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+            
         <h3>What They Can Do For Us</h3>
         <p>
          These dogs are trained to be the eyes, ears, and retrievers for their human companions.
@@ -66,7 +84,15 @@
         For example: if you want to travel, it should be for a very limited time so as not to produce undue stress and anxiety in your pet.
             Bringing a dog into your home will change your life.
         </p>
-            <img src="assets/img/cutesweepingpuppy.jpg" height="60%" width="40%">
+            
+         </div>
+            <div class="col-md-1"></div>
+        </div>
        </div>
+      </div>
+        <img src="assets/img/cutesweepingpuppy.jpg" height="60%" width="40%">
+        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/jquery-3.5.1.min.js"></script>
+        <script src="assets/js/popper.min.js"></script>
       </body>
      </html>
